{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 934,
  "lineage": "f4c6e0bd-4443-a3e8-f3f8-ef932eec961b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001001afcac48a54a",
            "domain": "vpc",
            "id": "eipalloc-001001afcac48a54a",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-131-90.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.131.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c956980e9e063e5",
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:instance/i-0dc90f311ee7cfb5d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc90f311ee7cfb5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8f22f80c0353a0d",
            "private_dns": "ip-10-0-1-97.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.97",
            "public_ip": "43.202.54.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0d7ffaabc44930ffa",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067ca93be53bc1796",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008d56a02c07174e0"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_key",
            "aws_security_group.public_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c956980e9e063e5",
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:instance/i-0beeefacf8c0a2785",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0beeefacf8c0a2785",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07500d2439037a2ea",
            "private_dns": "ip-10-0-2-57.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.57",
            "public_ip": "54.180.25.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0be889df5d76d63a1",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03582218454818f9e",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008d56a02c07174e0"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_key",
            "aws_security_group.public_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "was_private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c956980e9e063e5",
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:instance/i-00a6bcbafced4a67c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a6bcbafced4a67c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034fe176c40ba8a16",
            "private_dns": "ip-10-0-33-181.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.33.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b8980f3338518712",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eeba3d466fd66e15",
            "tags": {
              "Name": "was-private-1"
            },
            "tags_all": {
              "Name": "was-private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05737dd0e693921ed"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_key",
            "aws_security_group.inner_lb_sg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.was_private_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.was_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c956980e9e063e5",
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:instance/i-036fde271a72de60d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036fde271a72de60d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd51189f01465370",
            "private_dns": "ip-10-0-44-118.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.44.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0564863727d777663",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32085c5d14f2531",
            "tags": {
              "Name": "was-private-2"
            },
            "tags_all": {
              "Name": "was-private-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05737dd0e693921ed"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_key",
            "aws_security_group.inner_lb_sg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.was_private_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.was_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c956980e9e063e5",
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:instance/i-04333388379a50824",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04333388379a50824",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09cbbbb26f10b3d4a",
            "private_dns": "ip-10-0-11-62.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-01a117af100e31ef4",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f85fac968f9cfff",
            "tags": {
              "Name": "web-private-1"
            },
            "tags_all": {
              "Name": "web-private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-028a3e43393fc65f6"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_key",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c956980e9e063e5",
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:instance/i-02d309947020fd190",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d309947020fd190",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a727755c3ebf968",
            "private_dns": "ip-10-0-22-48.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.22.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-09ef1efb4ee85c45e",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c8e83fd47c2adc0",
            "tags": {
              "Name": "web-private-2"
            },
            "tags_all": {
              "Name": "web-private-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-028a3e43393fc65f6"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_key",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:internet-gateway/igw-07c5641cc2ba955e4",
            "id": "igw-07c5641cc2ba955e4",
            "owner_id": "556683426101",
            "tags": {
              "Name": "igw-main"
            },
            "tags_all": {
              "Name": "igw-main"
            },
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "inner_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:loadbalancer/app/inner-lb/fce1e8009cbf7202",
            "arn_suffix": "app/inner-lb/fce1e8009cbf7202",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-inner-lb-452046351.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:loadbalancer/app/inner-lb/fce1e8009cbf7202",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "inner-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-018fe36907a7ff067"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c8e83fd47c2adc0"
              },
              {
                "subnet_id": "subnet-09f85fac968f9cfff"
              }
            ],
            "subnets": [
              "subnet-05c8e83fd47c2adc0",
              "subnet-09f85fac968f9cfff"
            ],
            "vpc_id": "vpc-0521bad8613f7db05",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_instance.was_private_instance",
            "aws_key_pair.terra_key",
            "aws_lb_target_group.inner_lb_tg",
            "aws_security_group.inner_lb_sg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.was_private_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.was_private",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "outer_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:loadbalancer/app/outer-lb/ad3d7d5698eea0f2",
            "arn_suffix": "app/outer-lb/ad3d7d5698eea0f2",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "outer-lb-1568116525.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:loadbalancer/app/outer-lb/ad3d7d5698eea0f2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "outer-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0efaa5ba3bfbd76bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03582218454818f9e"
              },
              {
                "subnet_id": "subnet-067ca93be53bc1796"
              }
            ],
            "subnets": [
              "subnet-03582218454818f9e",
              "subnet-067ca93be53bc1796"
            ],
            "vpc_id": "vpc-0521bad8613f7db05",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_instance.web_private_instance",
            "aws_key_pair.terra_key",
            "aws_lb_target_group.outer_lb_tg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "inner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:listener/app/inner-lb/fce1e8009cbf7202/1e344be6e89b484d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/inner-lb-tg/199960b68bcfc3da",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:listener/app/inner-lb/fce1e8009cbf7202/1e344be6e89b484d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:loadbalancer/app/inner-lb/fce1e8009cbf7202",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.was_private_instance",
            "aws_key_pair.terra_key",
            "aws_lb.inner_lb",
            "aws_lb_target_group.inner_lb_tg",
            "aws_security_group.inner_lb_sg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.was_private_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.was_private",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "outer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:listener/app/outer-lb/ad3d7d5698eea0f2/9b4f106d3653ad02",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/outer-lb-tg/f2b365b41f192315",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:listener/app/outer-lb/ad3d7d5698eea0f2/9b4f106d3653ad02",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:loadbalancer/app/outer-lb/ad3d7d5698eea0f2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.web_private_instance",
            "aws_key_pair.terra_key",
            "aws_lb.outer_lb",
            "aws_lb_target_group.outer_lb_tg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "inner_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/inner-lb-tg/199960b68bcfc3da",
            "arn_suffix": "targetgroup/inner-lb-tg/199960b68bcfc3da",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/inner-lb-tg/199960b68bcfc3da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inner-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "inner-lb-tg"
            },
            "tags_all": {
              "Name": "inner-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "outer_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/outer-lb-tg/f2b365b41f192315",
            "arn_suffix": "targetgroup/outer-lb-tg/f2b365b41f192315",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/outer-lb-tg/f2b365b41f192315",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "outer-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "outer-lb-tg"
            },
            "tags_all": {
              "Name": "outer-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "inner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/inner-lb-tg/199960b68bcfc3da-2024032200222256900000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/inner-lb-tg/199960b68bcfc3da",
            "target_id": "i-00a6bcbafced4a67c"
          },
          "dependencies": [
            "aws_instance.was_private_instance",
            "aws_key_pair.terra_key",
            "aws_lb_target_group.inner_lb_tg",
            "aws_security_group.inner_lb_sg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.was_private_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.was_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/inner-lb-tg/199960b68bcfc3da-2024032200222252930000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/inner-lb-tg/199960b68bcfc3da",
            "target_id": "i-036fde271a72de60d"
          },
          "dependencies": [
            "aws_instance.was_private_instance",
            "aws_key_pair.terra_key",
            "aws_lb_target_group.inner_lb_tg",
            "aws_security_group.inner_lb_sg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.was_private_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.was_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "outer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/outer-lb-tg/f2b365b41f192315-2024032200221908050000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/outer-lb-tg/f2b365b41f192315",
            "target_id": "i-04333388379a50824"
          },
          "dependencies": [
            "aws_instance.web_private_instance",
            "aws_key_pair.terra_key",
            "aws_lb_target_group.outer_lb_tg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/outer-lb-tg/f2b365b41f192315-20240322002219040800000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:556683426101:targetgroup/outer-lb-tg/f2b365b41f192315",
            "target_id": "i-02d309947020fd190"
          },
          "dependencies": [
            "aws_instance.web_private_instance",
            "aws_key_pair.terra_key",
            "aws_lb_target_group.outer_lb_tg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001001afcac48a54a",
            "association_id": "eipassoc-0a37c261d50f3d20c",
            "connectivity_type": "public",
            "id": "nat-07cf155a9e7b63a1b",
            "network_interface_id": "eni-07588ed5f4a35967d",
            "private_ip": "10.0.1.235",
            "public_ip": "13.209.131.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-067ca93be53bc1796",
            "tags": {
              "Name": "ngw-main"
            },
            "tags_all": {
              "Name": "ngw-main"
            }
          },
          "dependencies": [
            "aws_eip.eip_main",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:route-table/rtb-0b9d4c48e59b0f0ed",
            "id": "rtb-0b9d4c48e59b0f0ed",
            "owner_id": "556683426101",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07cf155a9e7b63a1b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-private"
            },
            "tags_all": {
              "Name": "route-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_main",
            "aws_nat_gateway.ngw-main",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:route-table/rtb-0a62d634851d3f10f",
            "id": "rtb-0a62d634851d3f10f",
            "owner_id": "556683426101",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c5641cc2ba955e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-public"
            },
            "tags_all": {
              "Name": "route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_main",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01da985bf53747ea9",
            "route_table_id": "rtb-0a62d634851d3f10f",
            "subnet_id": "subnet-067ca93be53bc1796"
          },
          "dependencies": [
            "aws_internet_gateway.igw_main",
            "aws_route_table.route_public",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df03f82665e1261a",
            "route_table_id": "rtb-0a62d634851d3f10f",
            "subnet_id": "subnet-03582218454818f9e"
          },
          "dependencies": [
            "aws_internet_gateway.igw_main",
            "aws_route_table.route_public",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "was_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cebed3b74341556",
            "route_table_id": "rtb-0b9d4c48e59b0f0ed",
            "subnet_id": "subnet-0eeba3d466fd66e15"
          },
          "dependencies": [
            "aws_eip.eip_main",
            "aws_nat_gateway.ngw-main",
            "aws_route_table.route_private",
            "aws_subnet.public",
            "aws_subnet.was_private",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bed61d7fa5939fc0",
            "route_table_id": "rtb-0b9d4c48e59b0f0ed",
            "subnet_id": "subnet-0f32085c5d14f2531"
          },
          "dependencies": [
            "aws_eip.eip_main",
            "aws_nat_gateway.ngw-main",
            "aws_route_table.route_private",
            "aws_subnet.public",
            "aws_subnet.was_private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087123c93b3e9296e",
            "route_table_id": "rtb-0b9d4c48e59b0f0ed",
            "subnet_id": "subnet-09f85fac968f9cfff"
          },
          "dependencies": [
            "aws_eip.eip_main",
            "aws_nat_gateway.ngw-main",
            "aws_route_table.route_private",
            "aws_subnet.public",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c463a14594b784ed",
            "route_table_id": "rtb-0b9d4c48e59b0f0ed",
            "subnet_id": "subnet-05c8e83fd47c2adc0"
          },
          "dependencies": [
            "aws_eip.eip_main",
            "aws_nat_gateway.ngw-main",
            "aws_route_table.route_private",
            "aws_subnet.public",
            "aws_subnet.web_private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inner_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:security-group/sg-018fe36907a7ff067",
            "description": "sg for inner loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018fe36907a7ff067",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-028a3e43393fc65f6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-028a3e43393fc65f6"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-028a3e43393fc65f6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "inner-lb-sg",
            "name_prefix": "",
            "owner_id": "556683426101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inner-lb-sg"
            },
            "tags_all": {
              "Name": "inner-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "outer_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:security-group/sg-0efaa5ba3bfbd76bd",
            "description": "sg for outer loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efaa5ba3bfbd76bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "outer-lb-sg",
            "name_prefix": "",
            "owner_id": "556683426101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "outer-lb-sg"
            },
            "tags_all": {
              "Name": "outer-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:security-group/sg-008d56a02c07174e0",
            "description": "sg for public instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008d56a02c07174e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "556683426101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:security-group/sg-05737dd0e693921ed",
            "description": "sg for was private instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05737dd0e693921ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-018fe36907a7ff067"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-018fe36907a7ff067"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-018fe36907a7ff067"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "was-private-sg",
            "name_prefix": "",
            "owner_id": "556683426101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "was-private-sg"
            },
            "tags_all": {
              "Name": "was-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.inner_lb_sg",
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_security_group.web_private_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:security-group/sg-028a3e43393fc65f6",
            "description": "sg for web private instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028a3e43393fc65f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-0efaa5ba3bfbd76bd"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-0efaa5ba3bfbd76bd"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d56a02c07174e0",
                  "sg-0efaa5ba3bfbd76bd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-private-sg",
            "name_prefix": "",
            "owner_id": "556683426101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-private-sg"
            },
            "tags_all": {
              "Name": "web-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.outer_lb_sg",
            "aws_security_group.public_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:subnet/subnet-067ca93be53bc1796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067ca93be53bc1796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556683426101",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "subnet-public-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:subnet/subnet-03582218454818f9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03582218454818f9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556683426101",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "subnet-public-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:subnet/subnet-0eeba3d466fd66e15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.33.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeba3d466fd66e15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556683426101",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-was-private-1",
              "Type": "Private-was"
            },
            "tags_all": {
              "Name": "subnet-was-private-1",
              "Type": "Private-was"
            },
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:subnet/subnet-0f32085c5d14f2531",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.44.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f32085c5d14f2531",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556683426101",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-was-private-2",
              "Type": "Private-was"
            },
            "tags_all": {
              "Name": "subnet-was-private-2",
              "Type": "Private-was"
            },
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:subnet/subnet-09f85fac968f9cfff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f85fac968f9cfff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556683426101",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-web-private-1",
              "Type": "Private-web"
            },
            "tags_all": {
              "Name": "subnet-web-private-1",
              "Type": "Private-web"
            },
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:subnet/subnet-05c8e83fd47c2adc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c8e83fd47c2adc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556683426101",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-web-private-2",
              "Type": "Private-web"
            },
            "tags_all": {
              "Name": "subnet-web-private-2",
              "Type": "Private-web"
            },
            "vpc_id": "vpc-0521bad8613f7db05"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:556683426101:vpc/vpc-0521bad8613f7db05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc36bc4dedd8b053",
            "default_route_table_id": "rtb-0cfce201c765208fe",
            "default_security_group_id": "sg-036c377984af63455",
            "dhcp_options_id": "dopt-0bc4a53750cf05712",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0521bad8613f7db05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cfce201c765208fe",
            "owner_id": "556683426101",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}